[metadata]
name = fistas
version = 0.2.0
description = A lil sampler for use with Makey-Makey
long_description = file: README.md
license = GPL

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
  wheel
install_requires =
  pyaudio
  pygame

[options.entry_points]
console_scripts =
  paci = fistas:main
