[metadata]
name = fistas
version = 1.0.0
description = A lil sampler for use with Makey-Makey
long_description = file: README.md
license = GPL

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
  wheel
install_requires =
  PySide2

[options.entry_points]
console_scripts =
  fistas = fistas.application:main
